--- a/ReadMe.html
+++ b/ReadMe.html
@@ -20,16 +20,15 @@ itself (or any other subversion client) to check out a working copy.
 Check it out from the following URL:</p>
 
 <pre>
-   <a href="http://tortoisesvn.tigris.org/svn/tortoisesvn/trunk">http://tortoisesvn.tigris.org/svn/tortoisesvn/trunk</a> (user 'guest' as username and '' as password)
+   <a href="https://tortoisesvn.googlecode.com/svn/trunk">https://tortoisesvn.googlecode.com/svn/trunk</a>
 
   <p>Check out a working copy using TortoiseSVN - just click on the Tortoise!</p>
-  <a href="tsvn:http://tortoisesvn.tigris.org/svn/tortoisesvn/trunk">
-  <img src="http://tortoisesvn.tigris.org/images/TortoiseCheckout.png"></a>
+  <a href="tsvn:https://tortoisesvn.googlecode.com/svn/trunk"><img src="https://tortoisesvn.googlecode.com/svn/trunk/www/images/TortoiseCheckout.png"></a>
 
 </pre>
 
 <p>That will get you a new working copy, containing the latest sources. 
-Read the <a href=http://tortoisesvn.tigris.org/svn/tortoisesvn/trunk/build.txt>build.txt</a> file
+Read the <a href=https://tortoisesvn.googlecode.com/svn/trunk/build.txt>build.txt</a> file
 for instructions on building in the working copy.
 
 </td>
@@ -37,7 +36,7 @@ for instructions on building in the working copy.
 <tr>
 <TD WIDTH="100%" HEIGHT="100" BGCOLOR="#f0f0f0">
 <p>
-You can browse the sourcecode online in <a href=http://tortoisesvn.tigris.org/svn/tortoisesvn/>HTML</a> or using <b><a href=http://tortoisesvn.tigris.org/source/browse/tortoisesvn/trunk/>ViewCVS</a></b>
+You can browse the sourcecode online in <a href=https://tortoisesvn.googlecode.com/svn/>Google Code</a> or <b><a href=http://code.google.com/p/tortoisesvn/source/browse/>Google Source Browser</a>.</b>
 </p>
 </td>
 </tr>
